# SenialSOLIDApp

./: .babelrc  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .pydocstyle  .pylintrc  .radon.cfg  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_ONBOARDING.md  GUIA_CONFIGURACION.md  LICENSE  MILESTONE-SSA-6.md  Makefile.docs  QUALITY_BASELINE_REPORT.md  QUALITY_MEASUREMENT_RESULTS.md  README.md  SSA-20-ACCESSIBILITY-FEATURES.md  SSA-22_structured_logging_plan.md  SSA-25_VALIDATION_REPORT.md  TECHNICAL_ARCHITECTURE.md  VERSION  accessibility_demo.html  ci-template.yml  demo_exceptions.py  demo_ssa26_integration.py  demo_ssa26_phase1.py  functional_test.py  lanzador_pycharm.py  mypy.ini  package-lock.json  package.json  pyproject.toml  quality_gates.yaml  quality_results.json  requirements-dev.txt  requirements.txt  run_exception_tests.py  run_ssa24_tests.py  (+9 more)
.claude/: settings.local.json
01_presentacion/consola/: lanzador.py  presentacion_consola.py
01_presentacion/webapp/: flask_main.py  forms.py  modelos.py  performance_config.py  views.py  views_original_fixed.py  webapp_solid.py
01_presentacion/webapp/static/css/: styles.css  (+1 more)
01_presentacion/webapp/templates/: 404.html  index.html
03_aplicacion/contenedor/: configurador.py
03_aplicacion/datos/: configuracion.xml
03_aplicacion/managers/: __init__.py  controlador_adquisicion.py  controlador_procesamiento.py
04_dominio/adquisicion/: adquisidor.py
04_dominio/exceptions/: __init__.py  base_exceptions.py  domain_exceptions.py  exception_handler.py  infrastructure_exceptions.py  recovery_strategies.py
04_dominio/modelo/: senial.py
04_dominio/repositorios/: repositorio.py
05_Infraestructura/acceso_datos/: __init__.py  contexto.py  factory_context.py
aplicacion/: __init__.py
aplicacion/contenedor/: configurador.py  configurador_modern.py  test.py
aplicacion/managers/: controlador_adquisicion.py  controlador_procesamiento.py
aplicacion/patterns/: __init__.py  use_case_error_handler.py  validation_error_bridge.py
aplicacion/validation/: __init__.py
aplicacion/validation/decorators/: __init__.py  sanitization_decorators.py  validation_decorators.py
aplicacion/validation/exceptions/: __init__.py  validation_exceptions.py
aplicacion/validation/framework/: __init__.py  sanitization_engine.py  validation_pipeline.py  validator_base.py
aplicacion/validation/rules/: __init__.py  api_validation.py  config_validation.py  file_validation.py  signal_validation.py  user_input_validation.py
config/: MIGRATION_GUIDE.md  __init__.py  academic_resilience.yaml  config.yaml  config_loader.py  config_schema.yaml  lighthouse-config.json  logging_config.py
config/environments/: development.yaml  production.yaml  testing.yaml
deploy/: deploy_ssa21.sh  maintain_ssa21.sh
docs/: DOCSTRING_TEMPLATES.md  DOCUMENTATION_REVIEW_CHECKLIST.md  LOGGING_GUIDELINES.md  MANUAL_TESTING_GUIDE.md  QUALITY_STANDARDS_GUIDE.md  SPRINT-2-MILESTONE.md  SPRINT-2-RELEASE-NOTES.md  SSA-21-IMPLEMENTATION-SUMMARY.md  SSA-21-PERFORMANCE-IMPLEMENTATION.md  SSA-23-EXCEPTION-HANDLING-GUIDELINES.md  SSA-23-EXCEPTION-HANDLING-PLAN.md  SSA-23-EXCEPTION-HIERARCHY-DESIGN.md  SSA-23-REAL-BUG-FIX.md  SSA-24-Final-Validation-Report.md  SSA-24-Framework-Usage-Guide.md  SSA-24-Implementation-Examples.md  SSA-24-Input-Validation-Plan.md  SSA-24-Security-Guide.md  SSA-25_PLAN_CALIDAD_CODIGO.md  SSA-26-Academic-Error-Handling-Guide.md  SSA-26-Academic-Plan.md  SSA-26-Error-Handling-Patterns-Plan.md  SSA-27_DOCUMENTATION_STANDARDS.md  SSA-27_PLAN_DOCUMENTATION_STANDARDS.md  TECHNICAL_ARCHITECTURE.md  integration_demo_phase3.py  validation_framework_demo.py  validation_framework_demo_phase2.py
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: aplicacion.rst  config.rst  dominio.rst  infraestructura.rst  modules.rst  presentacion.rst
docs/sphinx/quality/: documentation_standards.rst
dominio/: __init__.py
dominio/adquisicion/: __init__.py  adquisidor.py  factory_adquisidor.py
dominio/exceptions/: __init__.py  presentation_exceptions.py
dominio/modelo/: senial.py
dominio/patterns/: __init__.py
dominio/patterns/error_boundaries/: __init__.py  domain_boundary.py
dominio/patterns/messaging/: __init__.py  user_message_formatter.py
dominio/patterns/resilience/: __init__.py  simple_retry.py
dominio/procesamiento/: factory_procesador.py  procesador.py
dominio/repositorios/: repositorio.py
infraestructura/acceso_datos/: contexto.py  factory_context.py  mapeador.py
presentacion/consola/: lanzador.py  presentacion_consola.py
presentacion/error_handlers/: __init__.py  flask_error_handler.py
presentacion/webapp/: config.py  flask_main.py  forms.py  run.py  ssa21_integration.py  views.py  webapp_solid.py
presentacion/webapp/static/: sw.js
scripts/: generate_docs.py  generate_reports.py  migrate_config.py  quality_check.py  setup.py  test_config.py  test_logging.py  test_modern_configurator.py
temp_testing/: browser_compatibility_test.html  performance_audit.html  responsive_test.html
temp_testing/templates/: 500.html  index.html
temp_testing/templates/aplicacion/: adquisicion.html  componentes.html  procesamiento.html
temp_testing/templates/general/: acerca.html  inicio.html
test_reports/: simple_test_summary_20250917_090507.txt  simple_test_summary_20250918_070958.txt
tests/: __init__.py  simple_test_runner.py  ssa24_test_reporter.py  test_exceptions.py  test_layer_integration.py  test_ssa24_integration.py  test_ssa24_performance.py  test_ssa24_security.py  test_ssa24_validation_framework.py
tests/test_reports/: ssa24_test_report_20250917_194816.html  ssa24_test_report_20250917_194945.html  ssa24_test_report_20250917_195749.html  ssa24_test_report_20250918_070927.html  ssa24_test_results_20250917_194816.json  ssa24_test_results_20250917_194945.json  ssa24_test_results_20250917_195749.json  ssa24_test_results_20250918_070927.json  ssa24_validation_evidence_20250917_194816.txt  ssa24_validation_evidence_20250917_194945.txt  ssa24_validation_evidence_20250917_195749.txt  ssa24_validation_evidence_20250918_070927.txt
(+13 files in other folders)
