[project]
name = "SenialSOLIDApp"
version = "2.0.0"
description = "Domain-Driven Design Signal Processing Application with SOLID Principles"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Victor Valotto", email = "vvalotto@gmail.com"}
]
maintainers = [
    {name = "Victor Valotto", email = "vvalotto@gmail.com"}
]
keywords = [
    "domain-driven-design",
    "solid-principles", 
    "signal-processing",
    "flask",
    "education",
    "architecture",
    "python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "flask-bootstrap>=3.3.7.1",
    "flask-moment>=1.0.5", 
    "flask-wtf>=1.1.1",
    "flask-sqlalchemy>=3.0.0",
    "wtforms>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-flask>=1.2.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "pre-commit>=3.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0", 
    "pytest-mock>=3.11.0",
    "pytest-flask>=1.2.0",
    "coverage>=7.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/vvalotto/SenialSOLIDApp"
"Bug Tracker" = "https://vvalotto.atlassian.net/jira/software/projects/SSA/issues"
"Documentation" = "https://vvalotto.atlassian.net/wiki/spaces/~62acd5154639000068d60d4a/pages/147685377/"
"Source Code" = "https://github.com/vvalotto/SenialSOLIDApp"
"Changelog" = "https://github.com/vvalotto/SenialSOLIDApp/blob/master/CHANGELOG.md"

[project.scripts]
senial-console = "01_presentacion.consola.lanzador:main"
senial-webapp = "01_presentacion.webapp.views:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["01_presentacion*", "03_aplicacion*", "04_dominio*", "05_Infraestructura*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--verbose",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101", "B601"]